--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.sdk=C:\\Flutter\\flutter
-sdk.dir=C:\\Users\\Brad\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Android
 flutter.versionCode=1
