--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ build/app/intermediates/flutter/debug/flutter_assets/kernel_blob.bin
 build/app/intermediates/incremental/debug-mergeJavaRes/merge-state
 android/local.properties
 build/app/intermediates/flutter/debug/flutter_assets/kernel_blob.bin
+lib/data/connect_repository.dart
