--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ build/app/intermediates/incremental/debug-mergeJavaRes/merge-state
 android/local.properties
 build/app/intermediates/flutter/debug/flutter_assets/kernel_blob.bin
 lib/data/connect_repository.dart
+.flutter-plugins
+.packages
+android/local.properties
+lib/data/connect_repository.dart
