--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,16 @@ dependencies:
   # uml help
   dcdg: ^2.0.1
 
+  # change flutter icon to default image
+  flutter_launcher_icons: ^0.7.3
+flutter_icons:
+  image_path: "assets/images/fresh.jpg"
+  ios: true
+  android: true
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +67,6 @@ dev_dependencies:
 
   build_runner: ^1.0.0
   json_serializable: ^3.0.0
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -75,7 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/bg_img.jpg
   #  - assets/local_inventory.json
   #  - assets/server_inventory.json
   # An image asset can refer to one or more resolution-specific "variants", see
