--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # allows camera and JSON usage
+  # allows camera, client and JSON usage
   http: 0.12.0+1
 
   #oauth2
@@ -49,6 +49,10 @@ dependencies:
 
   # uml help
   dcdg: ^2.0.1
+
+  # push notifications
+  flutter_local_notifications: ^1.2.2
+
 
   # change flutter icon to default image
   flutter_launcher_icons: ^0.7.3
@@ -82,6 +86,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/bg_img.jpg
+    - assets/images/fresh.jpg
   #  - assets/local_inventory.json
   #  - assets/server_inventory.json
   # An image asset can refer to one or more resolution-specific "variants", see
