--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   json_annotation: ^3.0.0
 
   # format the dateTime
-  intl: 0.16.1
+  intl: 0.16.0
 
   # allow calendar selection for dates
   datetime_picker_formfield: ^1.0.0
@@ -68,9 +68,15 @@ flutter_icons:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
 
   build_runner: ^1.0.0
   json_serializable: ^3.0.0
+
+  # local notification test requirements
+  e2e: ^0.2.4+2
+  pedantic: ^1.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
