--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   rflutter_alert: ^1.0.3
 
   # barcode scanner
-  barcode_scan_fix: ^1.0.2
+  barcode_scan: any
 
   # used for login screens
   flutter_login: 1.0.14
