--- a/android/local.properties
+++ b/android/local.properties
@@ -1,3 +1,10 @@
+## This file must *NOT* be checked into Version Control Systems,
+# as it contains information specific to your local configuration.
+#
+# Location of the SDK. This is only used by Gradle.
+# For customization when using a Version Control System, please read the
+# header note.
+#Tue Mar 24 13:21:50 PDT 2020
 flutter.buildMode=debug
 flutter.versionName=1.0.0
 flutter.sdk=/Users/tara/flutter
